make want/have syntax more symmetrical
This is in anticipation of the switch from server/client to
consumer/producer: The roles of both sides are becoming more
symmetrical, so each side should have a say in which minor versions get
chosen.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -361,17 +361,17 @@ A server **agrees to** using a module by answering a `want` message from the cli
 - Number of arguments: two or more
 
 A client can send a `want` message to the server to request usage of a module.
-The first argument MUST be the module name, and the remaining arguments SHALL be the major versions of that module that the client supports.
-Each major version MUST be formatted according to the `<major-version>` grammar element defined above.
-For example, the following `want` message indicates that the client wants to use either major version 1 or major version 2 of the `example` module.
+The first argument MUST be the module name, and the remaining arguments SHALL be the maximal module versions that the client supports.
+Each module version MUST be formatted according to the `<full-version>` grammar element defined above.
+Each module version with a minor version number greater than zero implies support for all module versions with the same module name, same major version, and a smaller minor version.
+For example, the following `want` message indicates that the client wants to use either major version 1 up to minor version 3 or major version 2 up to minor version 1 of the `example` module.
 
 ```vt6
-(want example 1 2)
+(want example 1.3 2.1)
 ```
 
-The first message that a client sends on each server connection MUST be a `want` message requesting the `core` module.
-
-*Rationale:* All other modules depend on the definitions in `core`, so it must be negotiated first.
+The set of module versions **offered by** a `want` message contains all module versions for which the message contains a module version with equal major version and greater or equal minor version.
+For example, the message shown above offers versions `1.0`, `1.1`, `1.2`, `1.3`, `2.0`, and `2.1` of the `example` module.
 
 ### 3.2. The `have` message
 
@@ -381,36 +381,42 @@ The first message that a client sends on each server connection MUST be a `want`
 Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate if it agrees to using the requested module.
 If the `want` message is valid, but the server does not agree to the requested module, it MUST reply with a `have` message with zero arguments.
 
-If the server agrees to using the requested module, it MUST reply with a `have` message with two arguments: the module name and the module version supported by the server.
-Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in that module version, or one with the same module name, same major version number and a smaller minor version number.
+If the server agrees to using the requested module, it MUST reply with a `have` message with two arguments: the module name and the accepted module version.
 The module version MUST be formatted according to the `<full-version>` grammar element defined above.
-The major version contained therein MUST be one of the major versions that appeared in the original `want` message.
+The module version MUST have been offered by the original `want` message.
+Receipt of the `have` message entitles the client to use all message types, properties and behavior defined in the accepted module version.
 
-The server MUST NOT agree to using a module if it does not support any of the major versions of that module which were offered in the `want` message.
-The server MUST NOT agree to using multiple major versions of the same module across multiple `have` messages on the same server connection.
-The server MAY agree to using different major versions of the same module on different server connections.
+The server MUST NOT agree to using a module if it does not support any of the offered module versions.
+The server MUST NOT agree to using different versions of the same module across multiple `have` messages on the same server connection.
+The server MAY agree to using different versions of the same module on different server connections.
 
 When a `want` message concerns the same module as an earlier `want` message, the server MUST reply consistently.
-If it agreed to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST agree to this major version and offer the same full version as in the earlier `have` message.
-If it did not agree to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST NOT agree to this major version.
+If the server did not agree to using the module in the earlier `have` message, it MUST NOT agree to using any module versions that were offered by the earlier `want` message.
+If the server agreed to using the module in the earlier `have` message, it MUST agree to using the same module version again if (and only if) the agreed module version is offered by the current `want` message.
 
 The following snippet shows examples of streams of `want` messages and `have` replies.
 Each set of messages, as separated by an empty line, is to be considered as occurring on separate server connections.
 
 ```vt6
-(want core 1)
+(want core 1.0)
 (have core 1.0)
-(want foo 2)
+(want foo 2.3)
 (have foo 2.3)
---> client can now use core1.0 module and either foo2.0, foo2.1, foo2.2 or foo2.3 module
+--> client can now use core1.0 module and foo2.3 module
 
-(want core 1 2)
-(have core 2.1)
---> client can now use either core2.0 or core2.1 module, but not core1.x modules
-
-(want core 1)
+(want core 1.2)
 (have core 1.0)
-(want foo 1 2)
+(want foo 2.1)
+(have foo 2.0)
+--> client can only use core1.0 module and foo2.0 module, not the requested higher versions
+
+(want core 1.3 2.1)
+(have core 2.1)
+--> client can now use core2.1 module, but not core1.x modules
+
+(want core 1.0)
+(have core 1.0)
+(want foo 1.7 2.3)
 (have)
 --> server did not agree to using foo module
 ```
