notes from meeting

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -9,6 +9,13 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 
 This document uses augmented Backus-Naur form (ABNF) as defined in [RFC 5234](https://tools.ietf.org/html/rfc5234).
 
+TODO notes that need to be incorporated into the document:
+- define how stdin, stdout, stderr are special (unsoliticed messages on stdin get passed to stdout and vice versa, unsolicited messages on stderr and other BSs get discarded)
+- Routing and multiplexing is not a problem for most clients. When receiving unsolicited messages on stdin, they can just pass them through to stdout, and vice versa. Only programs that route text in complex ways (e.g. processes distributing input to several workers in parallel) need to maintain internal routing state. A regular qshell will just route everything to its foreground process unconditionally, thus not requiring extra internal state.
+- maybe put in a rationale that we only have *either* events flowing in the text's direction (text, input events, output annotations) *or* request-response workflows (want-have, "get password", "choose from dropdown menu", etc.) - consider making it a SHALL that messages fall into one of these categories
+- restrict `nope` to syntax errors, semantic errors must be indicated by a response message as defined by the module defining the request message (rationale: syntax errors can be detected by the next in line, but semantic errors can only be detected by the ultimate receiver; a generic `nope` for semantic errors would reintroduce the routing problem)
+- note to self: platform-specific methods for stream forking have been dropped; do we need to add language to describe that processes launching other processes need to supply them with valid stdin/stdout/stderr that work as expected?
+
 ## 1. Definitions and platform requirements
 
 In terminal applications, most textual data flows through one-directional pipes.
@@ -152,11 +159,7 @@ This includes, specifically:
 ### 1.6. Platforms
 
 A **platform** is an operating environment which is admissible for VT6 applications.
-A platform SHALL define:
-
-- which operating-system-level objects can be used as basic streams,
-- a method which allows the consumer of a basic stream to obtain a new basic stream connected to the same producer as the existing basic stream, and
-- a method which allows the producer of a basic stream to obtain a new basic stream connected to the same consumer as the existing basic stream.
+A platform SHALL define which operating-system-level objects can be used as basic streams.
 
 Basic streams obtained through these methods SHALL be wholly separate from the existing basic stream for the purposes of the VT6 specifications.
 
@@ -249,7 +252,7 @@ A message is **invalid** if...
 
 - the message's arguments do not conform to the requirements for the message's type, as stated in the specification defining the message type in question,
 
-- the length of the message exceeds the recipient's maximum message size (see sections 6.1 and 6.2), usually 1024 bytes, or
+- the length of the message (including the outer curly braces) exceeds the maximum message size of 1024 bytes, or
 
 - the message type is unknown or its use has not been agreed to on the basic stream over which it is received (see section 3).
 
@@ -455,34 +458,3 @@ An observer's request to change the value of a property does not imply any oblig
 The publisher may refuse to change the property's value at all (especially if the property is read-only), it may comply with the request, or set the property to an entirely different value, as long as the value is valid according to the property's specification.
 This is why a `core.pub` message is sent in reply to a `core.set` message.
 The observer SHOULD observe the `core.pub` reply to learn whether the requested changes were accepted.
-
-TODO adjust this example below, and section 6 after deciding what to do with the xxx-msg-bytes-max properties
-
-*Rationale:* For example, consider the case of the client trying to set `core.client-msg-bytes-max` to a larger value.
-The server might reject this, and report the previous value in the `core.pub` response; or it might choose a value inbetween the previous and the requested value because it absolutely cannot process messages larger than that.
-
-## 6. Properties for `vt6/core1.0`
-
-### 6.1. The `core.server-msg-bytes-max` property
-
-- Acceptable values: unsigned integers
-- Can be set by client: yes
-
-The value of this property is the maximum length of a message sent from the server to the client in bytes.
-The default value of this property MUST NOT be larger than 1024.
-
-*Rationale:* The upper limit is important because clients are therefore assured that a 1 KiB buffer can hold any single message sent by the server, unless a different limit is negotiated.
-We choose this standard buffer size of 1 KiB such that most, if not all, messages that ever need to be sent fit into this buffer, without wasting too much memory on buffers.
-
-### 6.2. The `core.client-msg-bytes-max` property
-
-- Acceptable values: unsigned integers
-- Can be set by client: yes
-
-The value of this property is the maximum length of a message sent from the client to the server in bytes.
-The default value of this property MUST NOT be smaller than 1024.
-
-*Rationale:* The lower limit is important because clients are therefore assured that any messages smaller than 1 KiB will be accepted by any server, unless a different limit is negotiated.
-The rationale from section 6.1 applies respectively.
-
-The client MUST observe the server response when setting this property, because the server may reject the new property value or choose a compromise value.
