--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -15,6 +15,7 @@ TODO notes that need to be incorporated into the document:
 - maybe put in a rationale that we only have *either* events flowing in the text's direction (text, input events, output annotations) *or* request-response workflows (want-have, "get password", "choose from dropdown menu", etc.) - consider making it a SHALL that messages fall into one of these categories
 - restrict `nope` to syntax errors, semantic errors must be indicated by a response message as defined by the module defining the request message (rationale: syntax errors can be detected by the next in line, but semantic errors can only be detected by the ultimate receiver; a generic `nope` for semantic errors would reintroduce the routing problem)
 - note to self: platform-specific methods for stream forking have been dropped; do we need to add language to describe that processes launching other processes need to supply them with valid stdin/stdout/stderr that work as expected?
+- To implement connection-lifetime-specific properties, each client gets a lifetime UUID from their parent in their vt6ack message. They have to include their lifetime in core.set messages. Once they've died, their parent announces the end of their lifetimes to the terminal.
 
 ## 1. Definitions and platform requirements
 
